Remove superfluous margins causing horizontal scrollbar appear. Fix size of the both content columns.

--- a/zaadanie3/style.css
+++ b/zaadanie3/style.css
@@ -19,6 +19,7 @@ body {
 }
 
 #content {
+    border-radius: 8px 8px 0 0;
     overflow-y: scroll;
     width: 100%;
     height: 800px;
@@ -92,7 +93,7 @@ ul li ul li a {
 /* ------------------- content ------------------- */
 @media screen and (min-width: 1000px){
     article, .part1, .part2 {
-        width: 45%;
+        width: 50%;
         float: left;
     }
 }
@@ -103,9 +104,8 @@ ul li ul li a {
     }
 }
 
-article {
-    margin-top: 50px;
-    margin-left: 10px;
+section {
+    margin: 1%;
 }
 
 img {
